# octorus

./: .gitignore  CLAUDE.md  Cargo.toml  README-jp.md  README.md  large_file.rs
.github/ISSUE_TEMPLATE/: bug-report-and-questions.md
.github/workflows/: lint.yml
benches/: symbol_search.rs  ui_rendering.rs
benches/common/: mod.rs
crates/tree-sitter-moonbit/: Cargo.toml  README.md
crates/tree-sitter-moonbit/src/: lib.rs
crates/tree-sitter-vue3/: Cargo.toml  LICENSE  README.md  build.rs
crates/tree-sitter-vue3/queries/: injections.scm
crates/tree-sitter-vue3/src/: lib.rs
dev/bench/: data.js  index.html
examples/: measure_parser_size.rs
queries/: go.scm  javascript.scm  python.scm  rust.scm  typescript.scm
scripts/: local_watch_demo.sh
src/: app.rs  cache.rs  config.rs  diff_store.rs  gitfilm.rs  headless.rs  init.rs  keybinding.rs  language.rs  lib.rs  loader.rs  local_comments.rs  main.rs  migrate.rs  symbol.rs  update.rs  url_parse.rs
src/ai/: adapter.rs  mod.rs  orchestrator.rs  prompt_loader.rs  prompts.rs  session.rs  worktree.rs
src/ai/adapters/: claude.rs  codex.rs  common.rs  mod.rs
src/ai/defaults/: rereview_proposal.md  reviewee_proposal.md  skill.md
src/ai/defaults/references/: config-reference.md  headless-output.md
src/ai/schemas/: reviewee_proposal.json
src/app/: ai_rally.rs  cockpit.rs  comments.rs  diff_cache.rs  file_tree.rs  filter.rs  git_log.rs  git_ops.rs  input.rs  input_diff.rs  input_text.rs  issue_detail.rs  issue_list.rs  key_sequence.rs  local_mode.rs  mod.rs  polling.rs  pr_list.rs  shell_command.rs  symbol.rs  tests.rs  types.rs
src/app/git_ops/: mod.rs
src/config/: keybindings.rs  loader.rs  mod.rs  schema.rs
src/diff/: mod.rs
src/editor/: mod.rs
src/github/: client.rs  comment.rs  commit.rs  dashboard.rs  issue.rs  mod.rs  pr.rs
src/github/snapshots/: octorus__github__issue__tests__snapshot_parse_issue_comments_multiple.snap  octorus__github__issue__tests__snapshot_parse_rest_issue_comment.snap  octorus__github__issue__tests__snapshot_parse_rest_issue_comment_graphql_format.snap  octorus__github__issue__tests__snapshot_reply_template_empty_body.snap  octorus__github__issue__tests__snapshot_reply_template_japanese.snap  octorus__github__issue__tests__snapshot_reply_template_multiline.snap  octorus__github__issue__tests__snapshot_reply_template_single_line.snap  octorus__github__issue__tests__snapshot_reply_template_truncated.snap
src/queries/c_sharp/: highlights.scm
src/queries/moonbit/: highlights.scm
src/syntax/: highlighter.rs  injection.rs  mod.rs  parser_pool.rs  themes.rs
src/ui/: ai_rally.rs  checks_list.rs  cockpit.rs  comment_list.rs  common.rs  diff_view.rs  file_list.rs  footer.rs  git_log.rs  git_ops.rs  help.rs  issue_comment_list.rs  issue_detail.rs  issue_list.rs  mod.rs  pr_description.rs  pr_list.rs  side_by_side.rs  simulate_modal.rs  split_view.rs  text_area.rs
src/ui/diff_view/: mod.rs
test-samples/: sample.hs  sample.lua  sample.php  sample.sh  sample.svelte  sample.swift
tests/: cli.rs
