[package]
name = "octorus"
version = "0.2.1"
edition = "2021"
authors = ["ushironoko"]
description = "A TUI tool for GitHub PR review, designed for Helix editor users"
license = "MIT"
repository = "https://github.com/ushironoko/octorus"
exclude = ["benches/", ".github/", ".claude/", "assets/"]

[[bin]]
name = "or"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.28.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "rt", "macros", "sync", "process", "io-util", "time"] }
tokio-util = "0.7.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.23"
tempfile = "3.24.0"
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
xdg = "2.5.2"
unicode-width = "0.2.2"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
syntect-tui = "3.0.4"
async-trait = "0.1.88"
tracing = "0.1.41"
chrono = "0.4.43"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.1"
rand_chacha = "0.9.0"

[[bench]]
name = "ui_rendering"
harness = false

[[bench]]
name = "diff_parsing"
harness = false
