[package]
name = "octorus"
version = "0.2.7"
edition = "2021"
authors = ["ushironoko"]
description = "A TUI tool for GitHub PR review, designed for Helix editor users"
license = "MIT"
repository = "https://github.com/ushironoko/octorus"
exclude = ["benches/", ".github/", ".claude/", "assets/"]

[[bin]]
name = "or"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.28.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "rt", "macros", "sync", "process", "io-util", "time"] }
tokio-util = "0.7.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.23"
tempfile = "3.24.0"
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
xdg = "2.5.2"
unicode-width = "0.2.2"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
syntect-tui = "3.0.4"
two-face = { version = "0.5.1", default-features = false, features = ["syntect-default-fancy"] }
async-trait = "0.1.88"
tracing = "0.1.41"
chrono = "0.4.43"
thiserror = "2.0.18"
smallvec = "1.15.0"
lasso = "0.7.3"
# compile-time perfect hash map for capture-to-scope mapping
phf = { version = "0.13.1", features = ["macros"] }
# tree-sitter for CST-based syntax highlighting
tree-sitter = "0.26.3"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
# New languages
tree-sitter-ruby = "0.23.1"
tree-sitter-zig = "1.1.2"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-moonbit = { git = "https://github.com/moonbitlang/tree-sitter-moonbit", rev = "28596c53e9bea464d05ef606deeee065e95a2665" }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.1"
rand_chacha = "0.9.0"

[[bench]]
name = "ui_rendering"
harness = false

[[bench]]
name = "diff_parsing"
harness = false
